# CSOPESY_OS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.txt
src/: aphelios.cpp  aphelios.h  cpu_tick.cpp  cpu_tick.h  main.cpp
src/config/: config_reader.cpp  config_reader.h
src/memory/: memory.cpp  memory.h
src/process/: instruction.cpp  instruction.h  process.cpp  process.h
src/scheduler/: scheduler.cpp  scheduler.h
src/session/: session.cpp  session.h
src/shell/: shell.cpp  shell.h
